# harbor-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LLM.md  README.md  SECURITY.md
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/partiri/: package.json
src/: cli.rs  client.rs  config.rs  error.rs  fsutil.rs  main.rs  output.rs
src/modules/: auth.rs  common.rs  init.rs  jobs.rs  llm.rs  mod.rs  pods.rs  regions.rs  secret.rs  services.rs  storage.rs  validate.rs  workspaces.rs
src/modules/lsp/: actions.rs  completion.rs  context_cache.rs  diagnostics.rs  documents.rs  hover.rs  locate.rs  mod.rs  schema.rs
src/modules/mcp/: install.rs  mod.rs  uninstall.rs
src/modules/projects/: create.rs  list.rs  mod.rs
src/modules/service/: create.rs  deploy.rs  env.rs  kill.rs  link.rs  logs.rs  mod.rs  pause.rs  pull.rs  push.rs  status.rs  token.rs  unpause.rs
tests/: lsp.rs
